Обнавлён backend и по просьбе преподователя посталвлена светлая тема. теперь работает вкладка пользователи у admin
