# Курсовая/project/backend/handler/admin_handler.go
@@ -9,13 +9,29 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-type AdminHandler struct {
-	analyticsSrv service.AnalyticsService
-	inventorySrv service.InventoryService // Мы добавим сюда методы CRUD
+type UpdateRoleInput struct {
+	Role string `json:"role"`
 }
 
-func NewAdminHandler(as service.AnalyticsService, is service.InventoryService) *AdminHandler {
-	return &AdminHandler{analyticsSrv: as, inventorySrv: is}
+type CreateDoctorInput struct {
+	UserID     int64  `json:"user_id"`
+	Speciality string `json:"speciality"`
+}
+
+type AdminHandler struct {
+	analyticsSrv service.AnalyticsService
+	inventorySrv service.InventoryService
+	usersServ    service.UsersService
+	doctorSrv    service.DoctorService // <-- Добавь это
+}
+
+func NewAdminHandler(as service.AnalyticsService, is service.InventoryService, us service.UsersService, ds service.DoctorService) *AdminHandler {
+	return &AdminHandler{
+		analyticsSrv: as,
+		inventorySrv: is,
+		usersServ:    us,
+		doctorSrv:    ds, // Теперь у админа есть доступ к сервису врачей
+	}
 }
 
 // GetStats godoc
@@ -32,6 +48,52 @@ func (h *AdminHandler) GetStats(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, stats)
+}
+
+// GetAllUsers godoc
+// @Summary      Получение всех пользователей из бд
+// @Tags         admin
+// @Produce      json
+// @Success      200 {array}  models.User
+// @Failure      500 {object} map[string]string
+// @Router       /api/admin/users [get]
+func (h *AdminHandler) GetAllUsers(c *gin.Context) {
+	users, err := h.usersServ.GetAllUsers()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Не удалось получить список пользователей"})
+		return
+	}
+	c.JSON(http.StatusOK, users)
+}
+
+// GetUserByRole godoc
+// @Summary      Получение пользователя по id и роли
+// @Tags         admin
+// @Produce      json
+// @Param        id   path int    true "ID пользователя"
+// @Param        role path string true "Роль пользователя"
+// @Success      200 {object} models.User
+// @Failure      404 {object} map[string]string
+// @Router       /api/admin/users/{id}/{role} [get]
+func (h *AdminHandler) UpdateUserRole(c *gin.Context) {
+	id, err := strconv.ParseInt(c.Param("id"), 10, 64)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid ID"})
+		return
+	}
+
+	var input UpdateRoleInput
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Неверный формат данных"})
+		return
+	}
+
+	err = h.usersServ.UpdateUserRole(id, models.UserRole(input.Role))
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusOK, gin.H{"message": "Роль обновлена"})
 }
 
 // GetRevenue godoc
@@ -80,4 +142,23 @@ func (h *AdminHandler) CreateMed(c *gin.Context) {
 	}
 	// Вызов метода из InventoryService
 	c.JSON(http.StatusCreated, gin.H{"message": "Медикамент добавлен"})
+}
+
+func (h *AdminHandler) CreateDoctor(c *gin.Context) {
+	var input CreateDoctorInput
+	if err := c.ShouldBindJSON(&input); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Неверные данные"})
+		return
+	}
+
+	newDoctor := &models.Doctor{
+		UserID:     input.UserID,
+		Speciality: input.Speciality,
+	}
+
+	if err := h.doctorSrv.CreateDoctor(newDoctor); err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+	c.JSON(http.StatusCreated, gin.H{"message": "Профиль врача создан"})
 }
